# clp-ffi-js

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Taskfile.yml  eslint.config.mjs  lint-requirements.txt  lint-tasks.yml  package-lock.json  package.json  serve.json  taskfile.yaml  test.mjs  tsconfig.build.json  tsconfig.json  tsdoc.legacy.json  typedoc.json  typedoc.jsonc  vitest.browser.config.ts  vitest.config.ts  vitest.node.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: docs.yaml  lint.yaml  lint.yml  pr-title-checks.yaml  publish-npm.yml  publish-to-npm.yaml  publish-to-npm.yml  test.yaml  tests.yaml
docs/: hierarchy.html  index.html  modules.html
docs/assets/: navigation.js  search.js
docs/classes/: ClpArchiveReader.ClpArchiveReader.html  LogEvent.LogEvent.html
docs/interfaces/: types.FileInfo.html
docs/modules/: ClpArchiveReader.html  LogEvent.html  types.html
docs/types/: types.FieldValue.html  types.FileInfoArray.html
src/: .clang-format  .clang-tidy  ClpIrV1Decoder.cpp  ClpIrV1Decoder.hpp  ClpJsException.hpp  bindings.cpp  constants.hpp  pre.js  types.hpp
src/clp_ffi_js/: .clang-format  .clang-tidy  ClpFfiJsException.hpp  ClpJsException.hpp  binding_types.cpp  binding_types.hpp  bindings.cpp  constants.hpp  json_utils.cpp  json_utils.hpp  types.hpp  utils.cpp  utils.hpp  utils.ts
src/clp_ffi_js/ir/: ClpIrV1Decoder.cpp  ClpIrV1Decoder.hpp  IRStreamReader.cpp  IRStreamReader.hpp  IrStreamReader.cpp  IrStreamReader.hpp  KVPairIRStreamReader.cpp  KVPairIRStreamReader.hpp  LogEventWithFilterData.hpp  LogEventWithLevel.hpp  LogViewerEvent.hpp  StreamReader.cpp  StreamReader.hpp  StreamReaderContext.hpp  StreamReaderDataContext.hpp  StreamWriter.cpp  StreamWriter.hpp  StructuredIrStreamReader.cpp  StructuredIrStreamReader.hpp  StructuredIrStreamWriter.cpp  StructuredIrStreamWriter.hpp  StructuredIrUnitHandler.cpp  StructuredIrUnitHandler.hpp  UnstructuredIrStreamReader.cpp  UnstructuredIrStreamReader.hpp  decoding_methods.cpp  decoding_methods.hpp  query_methods.cpp  query_methods.hpp  utils.cpp  utils.hpp
src/clp_ffi_js/sfa/: ClpArchiveReader.ts  ClpSfaReader.cpp  LogEvent.ts  SfaReader.cpp  SfaReader.hpp  index-node.ts  index-worker.ts  index.ts  module.ts  types.ts  utils.ts
taskfiles/: deps.yaml  docs.yaml  lint.yaml  node-modules.yaml  test.yaml  tests.yaml  toolchains.yaml
test/: ClpArchiveReader.test.ts  ClpSfaReader.test.ts  ClpStreamReader.test.ts  SfaUtils.test.ts  StructuredIrStreamReader.test.ts  UnstructuredIrStreamReader.test.ts  commonStreamReaderTests.ts  constants.ts  globalSetup.ts  sfaModule.test.ts  types.ts  utils.ts
test/stream-writer/: index.html  test-node.mjs  test-worker.js
test/utils/: browser.ts  common.ts  index.ts  node.ts
tests/: globalSetup.ts
